# RDT_APython_v2

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  DOCS.md  MANIFEST.in  Makefile  README.md  SECURITY.md  codecov.yml  create_common_templates.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  integration-tests.yml  lint-test.yml  publish-pypi.yml  run-all-tests.yml  slow-tests.yml  testpypi-ci.yml
BRANDING/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
CONTRIBUTORS/: index.html
DEVELOPMENT/: index.html
DOCS/: index.html
ROADMAP/: index.html
SECURITY/: index.html
api-reference/: index.html
cli/: index.html
configuration/: index.html
databases/: index.html
docs/: BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  DOCS.md  ROADMAP.md  api-reference.md  cli.md  configuration.md  databases.md  frameworks.md  index.md  integration.md  quickstart.md
examples/: README.md
frameworks/: index.html
integration/: index.html
presto/: __init__.py  __version__.py
presto/cli/: __init__.py  commands.py  display.py  interactive.py
presto/core/: alembic_setup.py  dependencies.py
presto/strategies/: __init.py  base.py  django_rest.py  fastapi.py  flask_restx.py
quickstart/: index.html
rdt/: __init__.py  __version__.py
rdt/cli/: __init__.py  commands.py  display.py  interactive.py
rdt/core/: alembic_setup.py  config.py  dependencies.py  generator.py  renderer.py
rdt/strategies/: __init.py  base.py  django_rest.py  fastapi.py  flask_restx.py
scripts/: create_new_version  debug_print_routes.py  inspect_generated.py  inspect_generated_models.py
search/: search_index.json
templates/common/: .gitignore.j2  Dockerfile.j2  README.md.j2  app.py.j2  config.py.j2  docker-compose.yml.j2  env.example.j2  gitignore.j2  pyproject.toml.j2  pytest.ini.j2  security.py.j2  test_security.py.j2
templates/django-rest/djangoORM/: .env.test.example.j2  conftest.py.j2  models.py.j2  permissions.py.j2  pytest.ini.j2  serializers.py.j2  settings.py.j2  test_api.py.j2  test_models.py.j2  urls.py.j2  views.py.j2
templates/fastapi/sqlalchemy/: config.py.j2  conftest.py.j2  database.py.j2  main.py.j2  models.py.j2  routes.py.j2  routes_auth.py.j2  schemas.py.j2  test_api.py.j2  test_models.py.j2
test/: .env.example  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
test/src/: security.py
test/src/models/: models.py
test/src/routes/: routes_example.py
tests/: conftest.py  test_cli.py  test_config.py  test_dependencies.py  test_generator.py  test_renderer.py  test_strategies.py
tests/integration/: _utils.py  conftest.py  test_fastapi_db.py  test_fastapi_endpoints.py  test_fastapi_inprocess.py  test_flask_restx.py  test_generated_projects.py
vyte/cli/: commands.py  interactive.py
(+71 files in other folders)
